plugins/open-telemetry/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  open-telemetry
  annotations:
    konghq.com/plugins: open-telemetry-plugin
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /opentelemetry
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 1027
